# VideoEditor

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Jni_FFmpegCmd.c  Jni_FFmpegCmd.h  cmdutils.c  native-lib.cpp
app/src/main/cpp/include/libavcodec/arm/: mathops.h
app/src/main/cpp/include/libavutil/arm/: timer.h
app/src/main/java/video/jd/Jni/: ColorUtils.java  FFmpegCmd.java  FileUtils.java  TrackUtils.java  VideoUitls.java
app/src/main/java/video/jd/editor/: CmdList.java  JVDraw.java  JVEditor.java  JVText.java  JVVideo.java  OnEditorListener.java
app/src/main/java/video/jd/jdvideoeditorlib/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
videoeditorsdk/: build.gradle
videoeditorsdk/src/androidTest/java/com/videoeditorsdk/: ExampleInstrumentedTest.java
videoeditorsdk/src/main/: AndroidManifest.xml
videoeditorsdk/src/main/java/com/videoeditorsdk/: Constants.java  MyApplication.java  MyClassLoader.java
videoeditorsdk/src/main/java/com/videoeditorsdk/activity/: AudioEditorActivity.java  AudioMixActivity.java  AudioPreviewActivity.java  AudioSelectActivity.java  BaseActivity.java  MainActivity.java  MediaSelectVideoActivity.java  PreviewActivity.java  RecordedActivity.java  VideoConnectActivity.java  VideoSelectActivity.java
videoeditorsdk/src/main/java/com/videoeditorsdk/adapter/: AudioAdapter.java  VideoAdapter.java  VideoSelectAdapter.java
videoeditorsdk/src/main/java/com/videoeditorsdk/bean/: AudioSettingInfo.java  CutBean.java  MediaDecode.java  Song.java
videoeditorsdk/src/main/java/com/videoeditorsdk/camera/: CameraController.java  ICamera.java  SensorControler.java
videoeditorsdk/src/main/java/com/videoeditorsdk/drawer/: CameraDrawer.java  TextureRender.java  VideoDrawer.java
videoeditorsdk/src/main/java/com/videoeditorsdk/filter/: AFilter.java  CameraFilter.java  GroupFilter.java  NoFilter.java  OesFilter.java  ProcessFilter.java  RotationOESFilter.java  WaterMarkFilter.java
videoeditorsdk/src/main/java/com/videoeditorsdk/gpufilter/: SlideGpuFilterGroup.java
videoeditorsdk/src/main/java/com/videoeditorsdk/jni/: AudioJniUtils.java
videoeditorsdk/src/main/java/com/videoeditorsdk/media/: MediaCodecInfo.java  MediaPlayerWrapper.java  VideoInfo.java
videoeditorsdk/src/main/java/com/videoeditorsdk/mediacodec/: AudioCodec.java  AudioDecodeRunnable.java  AudioEncodeRunnable.java  AudioRunnable.java  InputSurface.java  MediaMuxerRunnable.java  OutputSurface.java  OutputSurfaceTwo.java  TextureRender.java  VideoClipper.java  VideoRunnable.java
videoeditorsdk/src/main/java/com/videoeditorsdk/utils/: DateUtils.java  DensityUtils.java  EasyGlUtils.java  MatrixUtils.java  OpenGlUtils.java  TimeFormatUtils.java
videoeditorsdk/src/main/java/com/videoeditorsdk/widget/: CameraView.java  CircularProgressView.java  FocusImageView.java  LoadingDialog.java  (+2 more)
videoeditorsdk/src/main/res/layout/: activity_audio_preview.xml  activity_connect.xml  activity_main.xml  activity_media_select_video.xml  activity_recorde.xml  activity_video_preview.xml
videoeditorsdk/src/main/res/values/: strings.xml
videoeditorsdk/src/test/java/com/videoeditorsdk/: ExampleUnitTest.java
(+22 files in other folders)
